--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
                         <div class="add-to-cart">
 
                         <div class="add-container">
-                            <button id="minus-main-order" class="minus-btn"><i class="fas fa-minus"></i></button>
+                            <button disabled="true" id="minus-main-order" class="minus-btn"><i class="fas fa-minus"></i></button>
                         <input class="num-main-order" id="num-main-order" type="number" min="0" max="99" value="1" readonly>
                             <button id="plus-main-order" class="add-btn"><i class="fas fa-plus"></i></button>
                         </div>
