--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
         </div>
 
         <div class="menu-item-container" id="modal-open">
-            <img class="item-picture" src="img/waffletwo.png" alt="">
+            <img class="item-picture" src="img/hero-1.jpeg" alt="">
             <h3 class="item-name">Menu Item Name 2</h3>
             <p class="item-description">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Reprehenderit sapiente eius inventore veritatis, provident dolorem libero.</p>
             <h3 class="item-price">$15</h3>
