--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             <div class="cart-bar-cont"></div>
             
             <h2 class="cart-empty-text">Your Cart Is Empty</h2>
-            <button id="checkout" class="checkout">Checkout</button>
+            <button id="checkout" class="checkout"><a href="cart/cart.html">Checkout</a></button>
 
         </div>
 
@@ -23,6 +23,7 @@
         <div class="logo">
             <h5 class="logo-warp-one">The</h5><h5 class="logo-warp-two">Mad</h5><h5 class="logo-warp-three">Batter</h5>
         </div>
+        <div class="logo-two"></div>
     </section>
 
     <nav>
@@ -428,8 +429,8 @@
 
         </div> 
     </div>
-  
-    <section class="waffles" id="waffles">
+
+    <section class="menu-top waffles" id="waffles">
 
         <h2 class="menu">Waffles</h2>
 
@@ -483,6 +484,7 @@
 
 
     </section>
+
     <section class="french-toast" id="french-toast">
 
         <h2 class="menu">French Toast</h2>
@@ -629,8 +631,6 @@
         </div>
         
     </section>
-
-
 
         <script src="app.js"></script>
         <script src="https://kit.fontawesome.com/44e20fa782.js" crossorigin="anonymous"></script>
