--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             <div class="cart-bar-cont"></div>
             
             <h2 class="cart-empty-text">Your Cart Is Empty</h2>
-            <button id="checkout" class="checkout"><a href="cart/cart.html">Checkout</a></button>
+            <button id="checkout" class="checkout"><a href="cart.html">Checkout</a></button>
 
         </div>
 
