--- a/cart.html
+++ b/cart.html
@@ -14,7 +14,7 @@
     <div class="total-cart-price-cont">
 
         <div class="tip-btn-cont">
-            <button class="tip-btn tip-no">No Tip</button>
+            <button class="tip-btn tip-no tip-active">No Tip</button>
             <button class="tip-btn tip-ten">10%</button>
             <button class="tip-btn tip-fif">15%</button>
             <button class="tip-btn tip-twe">20%</button>
@@ -23,11 +23,11 @@
         <input type="checkbox" id="switch" name='delivery-switch'>
 
         <div class="final-price-adjust-cont">
-            <h3>Cart Items<p class="final-cart-price-one">$20.00</p></h3>
+            <h3>Cart Items<p class="final-cart-price-one">$0.00</p></h3>
             <hr>
-            <h3>Tax 10.75%<p>$2.88</p></h3>
+            <h3>Tax 10.25%<p class="tax-price">$0.00</p></h3>
             <hr>
-            <h3>Tip<p>$5.00</p></h3>
+            <h3>Tip<p class="tip-price">$0.00</p></h3>
             <hr>
             <h2>Total<p>$27.88</p></h2>
         </div>
