--- a/cart.html
+++ b/cart.html
@@ -29,7 +29,7 @@
             <hr>
             <h3>Tip<p class="tip-price">$0.00</p></h3>
             <hr>
-            <h2>Total<p>$27.88</p></h2>
+            <h2>Total<p class="final-total-price">$0.00</p></h2>
         </div>
 
     </div>
