--- a/index.html
+++ b/index.html
@@ -15,7 +15,6 @@
             
             <h2 class="cart-empty-text">Your Cart Is Empty</h2>
             <button id="checkout" class="checkout"><a href="cart.html">Checkout</a></button>
-
         </div>
 
 
@@ -37,6 +36,17 @@
         <hr>
     </nav>
 
+    <div class="mobile-cart-cont">
+        <a href="cart.html">
+        <div class="mobile-cart">
+            <i class="fas fa-shopping-cart"></i>
+            <h3>Checkout</h3>
+            <div class="mobile-cart-num-cont">
+                <span class="mobile-cart-num">0</span>
+            </div>
+        </div>
+        </a>
+    </div>
 
 
 
