--- a/cart.html
+++ b/cart.html
@@ -11,6 +11,13 @@
 </head>
 <body>
 
+    <div class="modal-cont">
+        <div class="modal">
+            <h3>Thank You For Your Order!</h3>
+            <a class="empty-cart-link" href="index.html">Return To Store</a>
+        </div>
+    </div>
+
     <div class="total-cart-price-cont">
 
         <div class="tip-btn-cont">
@@ -29,12 +36,16 @@
             <hr>
             <h2>Total<p class="final-total-price">$0.00</p></h2>
         </div>
-
+        
+        <div class="order-cont">
+        <button class="order-btn">Order</button>
+        </div>
     </div>
 
 
     <div class="logo-cont">
         <h1>The Mad Batter</h1>
+        <div class="logo"></div>
     </div>
 
     <div class="cart-cont">
