--- a/cart.html
+++ b/cart.html
@@ -85,7 +85,7 @@
 
 
     <div class="order-cont">
-        <button class="order-btn">Order</button>
+        <button class="order-btn" id="order-btn">Order</button>
     </div>
     
     <script src="https://kit.fontawesome.com/44e20fa782.js" crossorigin="anonymous"></script>
