--- a/index.html
+++ b/index.html
@@ -375,11 +375,11 @@
                 checked="true"
                 type="radio"
                 name="potatoes"
-                value="Hashbrowns"
+                value="Hash Browns"
                 id="hasbrowns"
                 class="free-checked modal-to-cart"
               />
-              <label for="hashbrowns">Hashbrowns</label>
+              <label for="hashbrowns">Hash Browns</label>
             </div>
             <div>
               <input
